# signal_subspace

./: .appveyor.yml  .f2py_f2cmap  .gitignore  .travis.sh  .travis.yml  BasicEspritExample.py  CMakeLists.txt  CMakePresets.json  FilterDesign.py  Makefile  Makefile.orig  Makefile_c  Makefile_f  Makefile_f_realsp  README.md  README.rst  RunSubspace.c  RunSubspace.f90  RunSubspace_realsp.f90  basic.py  cSubspace.c  cfort.c  cfort.f90  comm.f90  comm_legacy.f90  compiler.cmake  covariance.f90  covariance_realsp.f90  cppSubspace.cpp  desfilt.m  filters.f90  make.sh  matSubspace.m  meson.build  meson_options.txt  perf.f90  pyproject.toml  requirements.txt  setup.cfg  setup.cmake  (+9 more)
.github/workflows/: ci.yml  ci_cmake.yml  ci_meson.yml  ci_python.yml
archive/: .appveyor.yml  .travis.yml
cmake/: FindLAPACK.cmake  compilers.cmake  f2py.cmake  lapack.cmake  math.cmake
cmake/Modules/: FindATLAS.cmake
mod/: FindMKL.cmake
scripts/: BasicEspritExample.py  FilterDesign.py  matSubspace.m
signal_subspace/: __init__.py  filter.py  importfort.py  plots.py
spectral_analysis/: __init__.py  filter.py  importfort.py  plots.py  subspace.py
src/: CMakeLists.txt  RunSubspace.f90  RunSubspace_realsp.f90  comm.f90  comm.in.f90  comm_f2py.f90  comm_legacy.f90  covariance.f90  filters.f90  meson.build  perf.f90  signals.f90  subspace.f90  subspace_complex.f90  subspace_dummy.f90
src/signal_subspace/: __init__.py  plots.py
src/signal_subspace/tests/: conftest.py  test_all.py
src/tests/: CMakeLists.txt  RunSubspace.f90  RunSubspace_realsp.f90  cSubspace.c  cSubspace.h  cppSubspace.cpp  cppSubspace.h
test/: CMakeLists.txt  RunSubspace.f90  RunSubspace_realsp.f90  cSubspace.h  cppSubspace.cpp  test.py
tests/: Test.py  conftest.py  test.py  test_all.py  test_compilers.sh  test_unit.py
