[metadata]
name = signal_subspace
version = 1.0.1
author = Michael Hirsch, Ph.D.
description = 1-D & 2-D signal subspace estimation methods
url = https://github.com/scivision/signal_subspace
keywords =
  esprit
  MUSIC
  RootMusic
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  License :: OSI Approved :: MIT License
  Programming Language :: Python
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Scientific/Engineering
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
setup_requires =
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
include_package_data = True
packages = find:
install_requires =
  numpy
  scipy
  pandas

[options.extras_require]
tests =
  pytest
cov =
  pytest-cov
  coveralls
  flake8
  mypy
plot = 
  matplotlib
  seaborn

[options.entry_points]
console_scripts =
  Esprit = BasicEspritExample:main

[flake8]
max-line-length = 132
exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/
