[metadata]
name = signal_subspace
version = 1.0.2
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = 1-D & 2-D signal subspace estimation methods
url = https://github.com/scivision/signal_subspace
keywords =
  esprit
  MUSIC
  RootMusic
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  License :: OSI Approved :: MIT License
  Programming Language :: Python
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
packages = find:
scripts =
  BasicEspritExample.py
  FilterDesign.py
install_requires =
  numpy > 1.16
  scipy
  pandas

[options.extras_require]
tests =
  pytest
  pytest-cov
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
plot =
  matplotlib
  seaborn
