[metadata]
name = signal_subspace
version = 1.1.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = 1-D & 2-D signal subspace estimation methods
url = https://github.com/scivision/signal_subspace
keywords =
  esprit
  MUSIC
  RootMusic
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering
license_files =
  LICENSE.txt

[options]
python_requires = >= 3.6
packages = find:
zip_safe = False
include_package_data = True
install_requires =
  numpy >= 1.16
  scipy
package_dir=
    =src

[options.packages.find]
where=src

[options.extras_require]
tests =
  pytest
  pandas
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
plot =
  matplotlib
  seaborn
